classDiagram

  class Direction {
    <<enum>>
    NORTH
    EAST
    SOUTH
    WEST
  }

  class Transportable {
    <<interface>>
    #setPosition(double x, double y)
  }

  class Movable{
    <<interface>>
    turnLeft() void
    turnRight() void
    move() void
  }

  class RepairShop {
    <<generic>>
    %% Comma-separated type-parameter lists not supported for generics. Use / to separate.
    -Map~String/T~ orders
    -int capacity
    -createMap(int capacity) Map~String/T~
    -isFull() boolean
    +RepairShop(int capacity)
    +createOrder(T) String
    +completeOrder(String) T
    +getCapacity() int
    +getInventorySize() int
    +orderExists(String id) boolean
  }
  note for RepairShop "T extends Car"

  class Vehicle{
    <<abstract>>
    +move() void
  }

  class TransportVehicle {
    <<abstract>>
    #initializeLift() void*
    #setLiftAngleToTilted() void*
    #restoreLiftAngle() void*
    #platformIsTilted() boolean*
    +enableTiltedMode() void
    +disableTiltedMode() void
  }

  class CarCarrier {
    <<abstract>>
    -Deque~Transportable~ deck
    -isInProximity(Vehicle) boolean
    #initializeDeck() void*
    +move() void
    +load(Transportable) void
    +unload() Transportable
    +getNumObjectsOnDeck() int
  }

  class Cottrell {
    #initializeDeck() void
  }

  class Truck {
    <<abstract>>
    #setLiftAngleToTilted() void
    #restoreLiftAngle() void
    +setLiftAngle(int) void
  }

  class Scania {
  }

  class Lift {
    -int maxAngle
    -int minAngle
    -int currentAngle
    +setAngle(int) void
    +setToMaxAngle() void
    +setToMinAngle() void
  }

  class Car {
    <<abstract>>
  }

  class TrimmedCar {
    <<abstract>>
  }

  class TurboCar {
    <<abstract>>
  }

  class Volvo240 {
  }

  class Saab95 {
  }


Vehicle --> Direction
Vehicle ..|> Movable
Vehicle <|-- TransportVehicle
Vehicle <|-- Car
TransportVehicle <|-- Truck
TransportVehicle <|-- CarCarrier
TransportVehicle *.. Lift
Truck <|-- Scania
CarCarrier <|-- Cottrell
CarCarrier "1" --> "0..n" Transportable
Car ..|> Transportable
Car <|-- TrimmedCar
Car <|-- TurboCar
TrimmedCar <|-- Volvo240
TurboCar <|-- Saab95